--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -1,17 +1,21 @@
 # LRP Estimation Methods for Pacific Salmon {#est-methods}
 
 The development of LRPs for Pacific salmon was guided by three key principles. Following these principles allowed for some consistency and comparability among LRPs, with an aim to avoid differences in status resulting from different LRPs being applied to the same SMU. See \@ref(app:first-appendix) for a list of resources for implementing these methods.
+
 <!-- CH comment: some of the text in this subsection may be moved to the Intro-->
 
 First, as described in Section \@ref(intro), LRPs  "represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities.” (DFO PA). This definition highlights that LRPs should be above the level where serious harm occurs, not at the level where it is occurring, and that long-term losses should be avoided. Also, this definition mentions possible impacts on other ecosystem components. Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring (Hilborn and Walters 1992). 
 
 Second, LRPs for Pacific salmon were developed to align with the goal of Canada's Wild Salmon Policy, to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity (DFO 2005). The WSP is Pacific salmon's implementation of DFO's Precautionary Approach Framework. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). Biological benchmarks delineating three zones of green, amber, and red have been identified to represent zones of increasing conservation concern requiring management intervention. The lower benchmark delineating the red and amber zones is identified at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). 
 
-One lower benchmark that is commonly used is the spawner abundances that results in recovery to SMSY within one generation under equilibrium conditions, Sgen (Holt et al. 2009). Status assessments under the Wild Salmon Policy generally integrate data across numerous dimensions of status, including spawner abundances, short and long-term trends, distribution of spawning, and fishing mortality relative to productivity (Holt et al. 2009). The framework for defining biological units and their assessment under the WSP has been adopted widely in Canada (e.g., FR sock, IFR coho, SBC CK, Skeena report, PSE).
+One lower benchmark that is commonly used is the spawner abundances that results in recovery to SMSY within one generation under equilibrium conditions, $S_{gen}$ (Holt et al. 2009). Status assessments under the Wild Salmon Policy generally integrate data across numerous dimensions of status, including spawner abundances, short and long-term trends, distribution of spawning, and fishing mortality relative to productivity (Holt et al. 2009). The framework for defining biological units and their assessment under the WSP has been adopted widely in Canada (e.g., FR sock, IFR coho, SBC CK, Skeena report, PSE). Maintaining CUs above the red zone (i.e., spawner abundances > Sgen, and/or above lower benchmarks on various dimensions of status) is consistent with avoiding serious harm to the CU. At this level, irreversible or slowly reversible impacts are avoided. Therefore, to be consistent with the Wild Salmon Policy, LRPs need to allow for component CUs to be above their lower benchmarks.
 
-Maintaining CUs above the red zone (i.e., spawner abundances > Sgen, and/or above lower benchmarks on various dimensions of status) is consistent with avoiding serious harm to the CU. At this level, irreversible or slowly reversible impacts are avoided. Therefore, to be consistent with the Wild Salmon Policy, LRPs need to allow for component CUs to be above their lower benchmarks.
+Third, estimate of LRPs should be estimated in a statistically integrated <!-- 
+  CW: or sequential Bayes? i.e. sampling from posterior--> way when possible in order to propagate uncertainties throughout analyses and to be consistent with current best-practices in fisheries assessments [@puntEssentialFeaturesNextgeneration2020]. @statonSequentialIntegratedBayesian2017 and @defilippoImprovingShorttermRecruitment2021 provide recent examples of integrated models used for salmon assessments. Both studies show that uncertainty propagation increase realism of model estimates and surrounding uncertainty. However, @statonSequentialIntegratedBayesian2017 demonstrated that similar results can be achieved by using sequential Bayesian estmation models. 
 
-Third, estimate of LRPs should be estimated in a statistically integrated way when possible in order to propagate uncertainties throughout analyses and to be consistent with current best-practices in fisheries assessments. <!--CH comment: add details and reference here-->
+<!--CH comment: add details and reference here -->
+<!-- CW: added refereneces-->
+
 
 
 
