remove poor status

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -30,7 +30,7 @@ The above definitions hinge on what defines 'poor' CU status. In the case of WSP
 
 ## PROPORTION-BASED LRPS
 
-A proportion-based LRP is simply the proportion of CUs required to be assessed as being above poor status. In all three case studies, we default to 100% of CUs being required to be above poor status when setting the LRP. In this case, the LRP acts as a trigger that is breached when one of more CUs is assessed as having poor status. Rationale for the choice of 100% of CUs required to be above poor status in order for an SMU to be considered above its LRP is described in (Holt et al. in review).
+A proportion-based LRP is simply the proportion of CUs required to be assessed as being above red status. In all three case studies, we default to 100% of CUs being required to be above red status when setting the LRP. In this case, the LRP acts as a trigger that is breached when one of more CUs is assessed as having red status. Rationale for the choice of 100% of CUs required to be above red status in order for an SMU to be considered above its LRP is described in (Holt et al. in review).
 
 We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent WSP status assessment above the red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent rapid multidimensional status assessment above red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., $S_{gen}$, percentile-based benchmarks, etc.). While we recommend applying methods (i) or (ii), approach (iii) is shown for comparison purposes to demonstrate consistency between rapid multidimensional status assessments and statuses derived from abundances relative to lower benchmarks.
 
