--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -11,6 +11,10 @@ output:
 <!--CH comment: I'm wondering about formatting of labels, i.e., using mathform of S_{gen} vs Sgen as part of Sgen-Ricker (when comparing LBM to Sgen-PriorCap) and Sgen_Ricker vs Sgen_priorCap when used as part of a label in historical plot. Sometimes underscore is used, sometime dash.
 Maybe we should ditch mathematical label for S_{gen} and always use plain text, Sgen so that the differences are not so jarring in the last section of this chapter? And maybe always use dashes instead of underscores in labels? Then should we do the same for SMSY? Or maybe keep as S_{MSY}, as it's not used much and in plain text there is no hint that MSY should be subscript. Or use Smsy to show the subscript in plain text?
 -->
+<!--
+  CW: We could also use: S\textsubscript{gen} and S\textsubscript{MSY}
+-->
+
 The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that return to the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. Like most coho salmon, IF Coho spend at least one full year in freshwater as fry before migrating to the ocean as smolts [@arbeiderInteriorFraserCoho2020]. Most (88%) IFC have a 3-year life cycle, in which they leave freshwater in their second year and spend 18 months at sea prior to returning to their natal system to spawn. The remaining 12% have a 4-year life cycle in which they spend an additional year in freshwater before migrating as smolts in their third year. Both 3-year and 4-year life cycles spend 18 months at sea. Less than 1% of IF Coho are believed to return as jacks (precocious mature males that spend only 6 months as sea) or at ages older than 4 years [@arbeiderInteriorFraserCoho2020].
 
 WSP Conservation Units (CUs) have been identified for Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundance in each of these smaller subpopulation units [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006; Table \@ref(tab:cohoCU2SP)]. The delineation of subpopulations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic evidence. The 11 subpopulations are described in detail by the @ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006. 
